--- a/css/playbar.scss
+++ b/css/playbar.scss
@@ -1,3 +1,8 @@
+$barColor: #02356A;
+$barBack: #F1E9E7;
+$barLoad: #81AEF1;
+$barPreview: #164F9C;
+
 body,html {
   background: #f5f5f5;
   padding: 0;
@@ -9,16 +14,16 @@ body,html {
   position: fixed;
   width: 100vw;
   text-align: center;
-  background: #333;
+  background: $barColor;
   bottom: 0;
   color: #fff;
   a {
     color: #fff;
     &:hover {
-      color: lightblue;
+      color: $barLoad;
     }
     &:active {
-      color: lightblue;
+      color: $barLoad;
     }
   }
 }
@@ -41,10 +46,10 @@ body,html {
     a {
       color: #333;
       &:hover {
-        color: lightblue;
+        color: $barLoad;
       }
       &:active {
-        color: lightblue;
+        color: $barPreview;
       }
     }
     text-align: center;
@@ -52,8 +57,11 @@ body,html {
     background: #f5f5f5;
     code {
       font-family: monospace;
-      background: #fff;
-      color: blue;
+      background: $barColor;
+      border-bottom: 1px solid black;
+      border-left: 4px solid $barPreview;
+      text-align: left;
+      color: $barBack;
       display: block;
       font-size: 1.2em;
       padding: 2px;
@@ -64,11 +72,11 @@ body,html {
 #playbarWrapperHorizontal {
   width: 100%;
   height: 5px;
-  background: #ccc;
+  background: $barBack;
 }
 
 #playbarHorizontalButton {
-  z-index: 2;
+  z-index: 3;
   padding: 0;
   border: none;
   outline: none;
@@ -77,28 +85,38 @@ body,html {
   border-radius: 50%;
   position: absolute;
   transform: translateY(-25%);
-  background: blue;
+  background: $barColor;
+}
+
+#playbarHorizontalProgressPreview {
+  z-index: 2;
+  position: absolute;
+  background: $barPreview;
+  height: inherit;
 }
 
 #playbarHorizontalProgress {
   z-index: 1;
   position: absolute;
-  background: blue;
+  background: $barColor;
+  height: inherit;
+}
+//0
+#playbarHorizontalProgressLoaded {
+  position: absolute;
+  background: $barLoad;
   height: inherit;
 }
 
-#playbarHorizontalProgressPreview {
-  position: absolute;
-  background: lightblue;
-  height: inherit;
-}
+
 
 #playbarWrapperVertical {
   position: absolute;
   bottom: 0;
   width: 5px;
-  height: 90px;
-  background: #ccc;
+  max-height: 90px;
+  height: 100%;
+  background: $barBack;
   left: 50%;
 }
 
@@ -113,20 +131,20 @@ body,html {
   position: absolute;
   transform: translateX(-25%);
   bottom: 0;
-  background: blue;
+  background: $barPreview;
 }
 
 #playbarVerticalProgress {
   z-index: 1;
   position: absolute;
-  background: blue;
+  background: $barColor;
   width: inherit;
   bottom: 0;
 }
 
 #playbarVerticalProgressPreview {
   position: absolute;
-  background: lightblue;
+  background: $barPreview;
   width: inherit;
   bottom: 0;
 }
